--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Parcel Sandbox</title>
-    <meta charset="UTF-8" />
-  </head>
+    <meta charset="UTF-8">
+  <link rel="stylesheet" href="/src.a2b27638.css"></head>
 
   <body>
     <div id="app"></div>
@@ -26,11 +26,11 @@
         <div id="scaleZ"></div>
       </div>
     </div>
-    <input type="text" id="formula" />
+    <input type="text" id="formula">
 
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
 
-    <script src="src/index.js"></script>
+    <script src="/src.a2b27638.js"></script>
   </body>
 </html>
