--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,6 @@
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-lessons-ui.js"></script>
     <script src="https://webgl2fundamentals.org/webgl/resources/webgl-utils.js"></script>
 
-    <script src="src/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
